# delegation-games

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  delegation_games.opam  dune-project
docs/: DDG_ARCHITECTURE.md  DDG_VALIDATION_RESULTS.txt  DESIGN.md  IMPLEMENTATION_SUMMARY.md  PARAMO_EXPERIMENT.md
lib/: agent.ml  belnap.ml  belnap_gadt.ml  chuaque_ffi.ml  chuaque_interface.ml  coalition.ml  core_types.ml  dialogue_effects.ml  dune  formation.ml  protocol_dec.ml  protocol_dig.ml  protocol_effects.ml  protocol_effects.mli  semantic_types.ml  simulation.ml
lib/dialectical/: analysis.ml  argument.ml  argumentation_framework.ml  dialectical_topology.ml  dune  paramo_topology.ml  protocol_ddg.ml
test/: bench_parallel.ml  dune  test_dialectical_routing.ml
